# RayTracing

./: CMakeLists.txt  Camera.hpp  Rasterizer.cpp  Rasterizer.hpp  Ray.h  Render.cpp  Render.hpp  Texture.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  Vector.hpp  myRayTracing.cpp
